# sshore

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RELEASE-v0.3.0.md  deny.toml  run_clippy.sh
.github/workflows/: ci.yml  release.yml
.planning/bookmark-groups/: CONTEXT.md  SPEC.md
.planning/bookmark-groups/tasks/: 001-add-bookmarkgroup-and-session-models.md  002-add-config-validation-for-groups.md  003-implement-split-pane-tui.md  004-wire-sessions-to-ssh-connection.md  005-integration-tests-and-polish.md
crates/russh-cryptovec/: Cargo.toml
crates/russh-cryptovec/src/: cryptovec.rs
crates/russh-cryptovec/src/platform/: mod.rs  unix.rs  windows.rs
crates/russh-sftp/: Cargo.toml  Cargo.toml.orig
crates/russh-sftp/benches/: upload_benchmark.rs
crates/russh-sftp/examples/: client.rs  server.rs
crates/russh-sftp/src/: buf.rs  de.rs  error.rs  lib.rs  ser.rs  utils.rs
crates/russh-sftp/src/client/: handler.rs  rawsession.rs
crates/russh-sftp/src/client/fs/: file.rs
crates/russh-sftp/src/protocol/: data.rs  file_attrs.rs  mod.rs
crates/russh-sftp/src/server/: handler.rs
docs/: RELEASE.md
packaging/aur/: PKGBUILD
packaging/homebrew/: sshore.rb
scripts/hooks/: pre-push
src/: cli.rs  keychain.rs  lib.rs  main.rs
src/config/: env.rs  import_csv.rs  import_json.rs  import_mobaxterm.rs  import_putty.rs  import_securecrt.rs  import_tabby.rs  mod.rs  model.rs  ssh_import.rs  writer.rs
src/sftp/: mod.rs  pipeline.rs  shortcuts.rs
src/ssh/: client.rs  known_hosts.rs  mod.rs  mux.rs  password.rs  snippet.rs  stdin_reader.rs  terminal_theme.rs  tunnel.rs
src/storage/: local_backend.rs  mod.rs  sftp_backend.rs
src/tui/: mod.rs  theme.rs
src/tui/views/: browser.rs  confirm.rs  form.rs  help.rs  import_wizard.rs  list.rs  mod.rs
src/tui/widgets/: env_badge.rs  mod.rs  search_bar.rs  status_bar.rs
tests/: export_import_test.rs  import_multi_source_test.rs  pty_hangup_test.rs  ssh_import_test.rs  unified_form_test.rs
tests/fixtures/: hosts.csv  hosts.json  mobaxterm_sessions.mxtsessions  putty_sessions.reg  securecrt_export.xml  tabby_config.yaml
