[package]
name = "sshore"
version = "0.1.0"
edition = "2024"
authors = ["Sergey <email>"]
description = "A terminal-native SSH connection manager with environment-aware safety"
license = "MIT"
repository = "https://github.com/aitechnerd/sshore"
keywords = ["ssh", "sftp", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# SSH & SFTP
russh = "0.57"
russh-keys = "0.49"
russh-sftp = "2.1"

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Search
fuzzy-matcher = "0.3"

# Filesystem
dirs = "6"
shellexpand = "3"
tempfile = "3"
glob = "0.3"

# Keychain
keyring = "3"

# Error handling
anyhow = "1"

# Streaming
tokio-stream = "0.1"

# Serialization
serde_json = "1"

# Other
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
whoami = "1"
base64 = "0.22.1"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
