[package]
name = "sshore"
version = "0.1.0"
edition = "2024"
authors = ["Sergey <email>"]
description = "A terminal-native SSH connection manager with environment-aware safety"
license = "MIT"
repository = "https://github.com/aitechnerd/sshore"
keywords = ["ssh", "sftp", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# SSH & SFTP
russh = "0.57"
russh-sftp = "2.1"

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Search
fuzzy-matcher = "0.3"

# Filesystem
dirs = "6"
shellexpand = "3"
tempfile = "3"
glob = "0.3"

# Keychain
keyring = "3"

# Error handling
anyhow = "1"

# Serialization
serde_json = "1"

# Import parsers
serde_yaml = "0.9"
quick-xml = "0.37"
csv = "1"
percent-encoding = "2"

# Other
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12"
sha1 = "0.10"
zeroize = "1.8.2"
fs2 = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
