[package]
name = "sshore"
version = "0.1.3"
edition = "2024"
authors = ["Sergey Belov <belov.ss@gmail.com>"]
description = "A terminal-native SSH connection manager with environment-aware safety"
license = "MIT"
repository = "https://github.com/aitechnerd/sshore"
keywords = ["ssh", "sftp", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# SSH & SFTP
russh = "0.57"
russh-sftp = "2.1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Search
fuzzy-matcher = "0.3"

# Filesystem
dirs = "6"
shellexpand = "3"
tempfile = "3"
glob = "0.3"

# Keychain
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# Error handling
anyhow = "1"

# Serialization
serde_json = "1"

# Import parsers
serde_yaml = "0.9"
quick-xml = "0.37"
csv = "1"
percent-encoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Byte buffers (zero-copy SFTP data path)
bytes = "1"

# Other
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12"
sha1 = "0.10"
zeroize = "1.8.2"
fs2 = "0.4"

# Memory allocator — returns freed pages to OS aggressively,
# preventing RSS bloat from russh's mlocked CryptoVec allocations.
# Not supported on Windows (jemalloc requires a C compiler configure step).
[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

# Unix stdin poll
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[patch.crates-io]
russh-cryptovec = { path = "crates/russh-cryptovec" }
russh-sftp = { path = "crates/russh-sftp" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
