[package]
edition = "2024"
rust-version = "1.85"
name = "russh-cryptovec"
version = "0.52.0"
authors = [
    "Pierre-Étienne Meunier <pe@pijul.org>",
    "Eugeny <e@ajenti.org",
]
description = "A vector which zeroes its memory on clears and reallocations."
license = "Apache-2.0"
repository = "https://github.com/warp-tech/russh"

[dependencies.log]
version = "0.4.11"

[dependencies.ssh-encoding]
version = "0.2"
features = ["bytes"]
optional = true

[dev-dependencies.wasm-bindgen-test]
version = "0.3.46"

[features]
ssh-encoding = ["dep:ssh-encoding"]

[target.'cfg(target_os = "windows")'.dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "basetsd",
    "minwindef",
    "memoryapi",
    "errhandlingapi",
    "sysinfoapi",
    "impl-default",
]

[target."cfg(unix)".dependencies.nix]
version = "0.29"
features = ["mman"]
